# Sick-Annual-Leave-Tracker

./: .gitignore  .replit  README.md  annual_leave.py  app.py  backup.py  database.py  db.py  employee_setup.py  install.py  leave.py  main.py  pyproject.toml  replit.md  requirements.txt  sick_leave.py  view_leave.py
attached_assets/: Pasted--2026-02-14-09-52-59-074-ERROR-in-app-Exception-on-GET-_1771055762763.txt
static/: style.css
templates/: add_leave.html  annual_leave.html  base.html  change_password.html  documents.html  folder.html  index.html  login.html  sick_leave.html  users.html
